# lct_aeroflot_2025

./: .gitignore  Dockerfile  app.py  base_minimum.py  classes.txt  constants.py  db.py  docker-compose.yaml  main.py  makefile  pipeline.py  readme.md  requirements.txt  rerun_compose.sh
clf/: .gitignore  Makefile  README.md  pyproject.toml
clf/configs/: cosine-112.yaml
clf/configs/encoder/: convnextv2_atto.yaml  convnextv2_atto_01.yaml  convnextv2_atto_02.yaml  convnextv2_atto_05.yaml  convnextv2_atto_s.yaml  convnextv2_atto_s_01.yaml  convnextv2_atto_s_02.yaml  convnextv2_atto_s_05.yaml  convnextv2_femto.yaml  convnextv2_nano.yaml  convnextv2_pico.yaml  convnextv2_tiny.yaml  dla.yaml  fbnetv3_b.yaml  fbnetv3_d.yaml  fbnetv3_g.yaml  ghostnet_010 copy.yaml  ghostnet_020.yaml  ghostnet_050 copy.yaml  ghostnet_100 copy.yaml  lcnet_050.yaml  lcnet_075.yaml  lcnet_100.yaml  mit.yaml  mobilenetv3_large_100.yaml  mobilenetv3_rw.yaml  mobilenetv3_small_050.yaml  mobilenetv3_small_075.yaml  mobilenetv3_small_100.yaml
clf/configs/export/: default.yaml
clf/configs/head/: clf.yaml
clf/configs/ldm/: clf.yaml
clf/configs/lm/: clf.yaml
clf/configs/lr_scheduler/: cosine.yaml  multistep.yaml
clf/configs/model/: clf.yaml
clf/configs/optimizer/: adamw.yaml
clf/configs/trainer/: default.yaml
clf/notebooks/: Aligning.ipynb  Annotate.ipynb  Run.ipynb
clf/src/: datasets.py  export.py  ldms.py  lms.py  losses.py  models.py  schedulers.py  train.py
clf/src/encoders/: __init__.py  base.py  convnext.py  dla.py  ghostnet.py  mit.py  mobilenet.py  preprocessing.py
clf/src/heads/: __init__.py  base.py  clf.py
docs/: slides.md
models/: clf.onnx
nix/: deploy.nix  fastapi-app.nix  install_nix.sh
src/: pipeline.py
static/: main.js  styles.css  table.js
templates/: dashboard.html  home.html  login.html
